--- a/react/009/my-app/package.json
+++ b/react/009/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://unidagit.github.io/reactpub/",
+  "homepage":"https://paullabkorea.github.io/reactpub/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
